// Orchex — Postgres OLTP schema
// Visualize at https://dbdiagram.io or with the DBML CLI.
//
// Related: README.md (functional + non-functional requirements)
// Graph validation rules mirror data-structure/workflow-graph.go

Project Orchex {
  database_type: 'PostgreSQL'
  Note: '''
    OLTP store for workflow definitions and active run state.
  '''
}

// ---------------------------------------------------------------------------
// Reference data
// ---------------------------------------------------------------------------

Enum node_category {
  trigger
  logic
  action
  terminal
}

Table node_types {
  id uuid [pk, default: `gen_random_uuid()`]
  type text [not null, unique, note: 'start | conditional | function | api | integration | response']
  category node_category [not null]
  display_name text [not null]
  min_in_degree int [not null]
  max_in_degree int [not null]
  min_out_degree int [not null]
  max_out_degree int [not null]
  config_schema jsonb [not null, default: '{}', note: 'JSON Schema for nodes.config (builder settings)']
  input_schema jsonb [not null, default: '{}', note: 'JSON Schema for runtime input from upstream']
  output_schema jsonb [not null, default: '{}', note: 'JSON Schema for runtime output to downstream']
  error_schema jsonb [not null, default: '{}', note: 'JSON Schema for node executor error envelope (type, code, message, retryable, details)']
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`, note: 'Auto-updated on every row update by DB/app layer']

  Note: '''
    Seeded reference catalog. Degree bounds enforce README graph rules at publish time.
    config/input/output/error schemas are JSON Schema documents seeded per type
    (see node-type-schemas/).

    | type         | category  | in | out | config strictness | i/o strictness |
    |--------------|-----------|----|-----|-------------------|----------------|
    | start        | trigger   | 0  | 1   | optional          | output known   |
    | response     | terminal  | 1  | 0   | strict            | input loose    |
    | conditional  | logic     | 1  | 2   | strict            | pass-through   |
    | function     | logic     | 1  | 1   | strict            | loose object   |
    | api          | action    | 1  | 1   | strict            | output known   |
    | integration  | action    | 1  | 1   | strict            | output loose   |
  '''
}

// ---------------------------------------------------------------------------
// Workflow definition (draft + published versions)
// ---------------------------------------------------------------------------

Enum workflow_status {
  draft
  published
  archived
}

Table workflows {
  id uuid [pk, default: `gen_random_uuid()`]
  name text [not null]
  description text [note: 'Optional; NULL when unset']
  status workflow_status [not null, default: 'draft']
  latest_published_version_id uuid [ref: > workflow_versions.id, note: 'NULL until first publish; then always set while status is published/archived']
  latest_version_id uuid [not null, ref: > workflow_versions.id, note: 'Always set. Create = workflow + empty v1 in one transaction']
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`, note: 'Auto-updated on every row update by DB/app layer']
  last_published_at timestamptz [note: 'NULL until first publish']

  Note: '''
    Mutable workflow container.
    latest_published_version_id points to the currently live published version (used for new runs).
    latest_version_id points to the latest editable head (draft or published).
    When no draft exists, both IDs are equal.
    Circular FK with workflow_versions: use a deferred constraint or insert workflow → version → set pointer in one txn.
  '''
}

Table workflow_versions {
  id uuid [pk, default: `gen_random_uuid()`]
  workflow_id uuid [not null, ref: > workflows.id]
  version int [not null, default: 1, note: 'Monotonic per workflow; app-assigned on create/fork (not a global serial)']
  created_at timestamptz [not null, default: `now()`]
  last_updated_at timestamptz [not null, default: `now()`, note: 'Auto-updated on every row update by DB/app layer']
  published_at timestamptz [note: 'NULL = draft; set once on publish']

  indexes {
    (workflow_id, version) [unique, name: 'uq_workflow_versions_workflow_version']
  }

  Note: '''
    Editable until published. After publish, treat this version as immutable.
    Runs always pin to a specific published version.

    PostgreSQL migration requirement (partial indexes are not representable in DBML):
    CREATE UNIQUE INDEX uq_workflow_versions_one_draft
      ON workflow_versions (workflow_id)
      WHERE published_at IS NULL;
  '''
}

// ---------------------------------------------------------------------------
// Graph: nodes + edges (DAG)
// ---------------------------------------------------------------------------

Table nodes {
  id uuid [not null, default: `gen_random_uuid()`, note: 'Client-generated logical id; stable across versions']
  workflow_version_id uuid [not null, ref: > workflow_versions.id]
  node_type_id uuid [not null, ref: > node_types.id]
  name text [not null]
  config jsonb [not null, default: '{}', note: 'Instance values validated against node_types.config_schema']
  position_x float [note: 'UI layout only; NULL until canvas places the node']
  position_y float [note: 'UI layout only; NULL until canvas places the node']
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`, note: 'Auto-updated on every row update by DB/app layer']

  indexes {
    (workflow_version_id, id) [pk]
    (workflow_version_id, name) [unique, name: 'uq_nodes_version_name']
  }

  Note: '''
    Steps in a workflow graph version.
    PK is (workflow_version_id, id) so the same client node id can exist on v1 and v2 after fork.
    Within one version, id must be unique. Remap in Update response only on rare within-version collisions.
    config holds builder settings; runtime i/o is validated against node_types input/output schemas.
  '''
}

Enum edge_label {
  default
  true
  false
}

Table workflow_edges {
  id uuid [not null, default: `gen_random_uuid()`, note: 'Client-generated logical id; stable across versions']
  workflow_version_id uuid [not null, ref: > workflow_versions.id]
  from_node_id uuid [not null]
  to_node_id uuid [not null]
  label edge_label [not null, default: 'default']
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`, note: 'Auto-updated on every row update by DB/app layer']

  indexes {
    (workflow_version_id, id) [pk]
    (workflow_version_id, from_node_id, label) [unique, name: 'uq_workflow_edges_source_label']
  }

  Note: '''
    Directed edges (from -> to). Cycles disallowed — validated at publish time (DAG).
    Conditional nodes use label=true and label=false for their two outgoing edges.
    PK is (workflow_version_id, id), same fork-stability rule as nodes.
    from/to FKs are composite: (workflow_version_id, from_node_id|to_node_id) → nodes.
  '''
}

Ref: workflow_edges.(workflow_version_id, from_node_id) > nodes.(workflow_version_id, id)
Ref: workflow_edges.(workflow_version_id, to_node_id) > nodes.(workflow_version_id, id)

// ---------------------------------------------------------------------------
// Execution (runtime)
// ---------------------------------------------------------------------------

Enum trigger_type {
  manual
  webhook
  scheduler
}

Enum workflow_run_status {
  pending
  running
  paused
  failed
  completed
  cancelled
}

Table workflow_runs {
  id uuid [pk, default: `gen_random_uuid()`]
  workflow_id uuid [not null, ref: > workflows.id]
  workflow_version_id uuid [not null, ref: > workflow_versions.id]
  status workflow_run_status [not null, default: 'pending']
  trigger_type trigger_type [not null, default: 'manual']
  current_node_id uuid [not null, note: 'Checkpoint. Set to start node on create; never NULL']
  error jsonb [note: 'NULL when healthy. Last failure: { node_id, error: <node error_schema payload> }. Cleared on retry/success (not on pause-Resume).']
  started_at timestamptz [note: 'NULL while pending; set when execution begins']
  paused_at timestamptz [note: 'NULL unless status=paused']
  cancelled_at timestamptz [note: 'NULL unless status=cancelled']
  completed_at timestamptz [note: 'NULL unless status=completed']
  failed_at timestamptz [note: 'NULL unless status=failed']
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`, note: 'Auto-updated on every row update by DB/app layer']

  Note: '''
    One execution of a published workflow version.
    Resume-from-failure uses current_node_id + error.
    current_node_id FK is composite with workflow_version_id → nodes.
    error wraps the failing node's error_schema payload with node_id for run-level context.
    Historical logs/traces belong in ClickHouse later — this column is operational state only.
    Timestamp columns are event markers matched to status by the app layer (not DB CHECKs in v1).
  '''
}

Ref: workflow_runs.(workflow_version_id, current_node_id) > nodes.(workflow_version_id, id)


